{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 12,
  "lineage": "3ac483a3-5310-c222-c435-f4f66b635c5f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722429318:internet-gateway/igw-00c9103951fea8c78",
            "id": "igw-00c9103951fea8c78",
            "owner_id": "194722429318",
            "tags": {
              "Name": "Web"
            },
            "tags_all": {
              "Name": "Web"
            },
            "vpc_id": "vpc-0e91de0e600381765"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00c9103951fea8c78",
            "id": "r-rtb-0d0383c98d1eea6901080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d0383c98d1eea690",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.web-gw",
            "aws_route_table.web",
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722429318:route-table/rtb-0d0383c98d1eea690",
            "id": "rtb-0d0383c98d1eea690",
            "owner_id": "194722429318",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "web-route"
            },
            "tags_all": {
              "Name": "web-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e91de0e600381765"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a6cb9ad6ba7d7d5",
            "route_table_id": "rtb-0d0383c98d1eea690",
            "subnet_id": "subnet-05a55b9c973f80bb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.web",
            "aws_subnet.web",
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722429318:security-group/sg-0c64d68b09abe70bd",
            "description": "allow ssh from home and work",
            "egress": [],
            "id": "sg-0c64d68b09abe70bd",
            "ingress": [],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "194722429318",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web"
            },
            "tags_all": {
              "Name": "Web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e91de0e600381765"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722429318:subnet/subnet-05a55b9c973f80bb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a55b9c973f80bb2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "194722429318",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Web"
            },
            "tags_all": {
              "Name": "Web"
            },
            "vpc_id": "vpc-0e91de0e600381765"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722429318:vpc/vpc-0e91de0e600381765",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a6a6817ddf84ee99",
            "default_route_table_id": "rtb-0b8a6f13706508a23",
            "default_security_group_id": "sg-03daf5b20e921cf47",
            "dhcp_options_id": "dopt-0165672c0b3097715",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e91de0e600381765",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b8a6f13706508a23",
            "owner_id": "194722429318",
            "tags": {
              "Name": "project_vpc",
              "Project": "lab_week_10"
            },
            "tags_all": {
              "Name": "project_vpc",
              "Project": "lab_week_10"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "web-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722429318:security-group-rule/sgr-00c6424859e7f7eff",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-00c6424859e7f7eff",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c64d68b09abe70bd",
            "security_group_rule_id": "sgr-00c6424859e7f7eff",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722429318:security-group-rule/sgr-05876ce35366f7ac5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-05876ce35366f7ac5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c64d68b09abe70bd",
            "security_group_rule_id": "sgr-05876ce35366f7ac5",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722429318:security-group-rule/sgr-0fced2a104a147f92",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0fced2a104a147f92",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c64d68b09abe70bd",
            "security_group_rule_id": "sgr-0fced2a104a147f92",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "module": "module.web_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0deae25777d073bc0",
            "arn": "arn:aws:ec2:us-west-2:194722429318:instance/i-0cf1c8b27deef35bd",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cf1c8b27deef35bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-4640",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0431b71f05c51283c",
            "private_dns": "ip-10-0-1-183.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.183",
            "public_dns": "ec2-34-220-191-136.us-west-2.compute.amazonaws.com",
            "public_ip": "34.220.191.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b98d67d26a0f7800",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a55b9c973f80bb2",
            "tags": {
              "Name": "lab_week_10-web-server",
              "Project": "lab_week_10"
            },
            "tags_all": {
              "Name": "lab_week_10-web-server",
              "Project": "lab_week_10"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c64d68b09abe70bd"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.web",
            "aws_vpc.web"
          ]
        }
      ]
    }
  ]
}